added filter notes by title functionality