@@ -31,10 +31,10 @@ public class NoteController {
     private final NoteMapper mapper;
 
     @GetMapping("/{id}")
-    public ResponseEntity<NoteResponseDto> getNoteById(@PathVariable Long id){
+    public ResponseEntity<NoteResponseDto> getNoteById(@PathVariable Long id) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User){
-            Note note = noteService.getNoteById(id).orElseThrow((()-> new EntityNotFoundException("No note with such id")));
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User) {
+            Note note = noteService.getNoteById(id).orElseThrow((() -> new EntityNotFoundException("No note with such id")));
 
             return ResponseEntity.ok(mapper.toDto(note));
         }
@@ -43,9 +43,9 @@ public class NoteController {
     }
 
     @PostMapping
-    public ResponseEntity<NoteResponseDto> createNote(@RequestBody NoteRequestDto noteRequestDto){
+    public ResponseEntity<NoteResponseDto> createNote(@RequestBody NoteRequestDto noteRequestDto) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User user){
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User user) {
             URI uri = URI.create((ServletUriComponentsBuilder.fromCurrentContextPath().path("/notes").toUriString()));
 
             return ResponseEntity.created(uri).body(mapper.toDto(noteService.saveNote(user.getId(), noteRequestDto)));
@@ -55,9 +55,9 @@ public class NoteController {
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> deleteNote(@PathVariable Long id){
+    public ResponseEntity<String> deleteNote(@PathVariable Long id) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User){
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User) {
             noteService.deleteNote(id);
 
             return ResponseEntity.ok().body("Note was deleted");
@@ -67,9 +67,9 @@ public class NoteController {
     }
 
     @PatchMapping("/{id}")
-    public ResponseEntity<NoteResponseDto> updateNote(@PathVariable Long id, @RequestBody NoteRequestDto noteRequestDto){
+    public ResponseEntity<NoteResponseDto> updateNote(@PathVariable Long id, @RequestBody NoteRequestDto noteRequestDto) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User){
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User) {
             Note updatedNote = noteService.updateNote(id, noteRequestDto);
 
             return ResponseEntity.ok(mapper.toDto(updatedNote));
@@ -79,15 +79,28 @@ public class NoteController {
     }
 
     @GetMapping
-    public ResponseEntity<List<NoteResponseDto>> getAllNotesByUser(){
+    public ResponseEntity<List<NoteResponseDto>> getAllNotesByUser() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User user){
-           ArrayList<Note> notes = noteService.getNotesByUser(user);
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User user) {
+            List<Note> notes = noteService.getNotesByUser(user);
 
-           return ResponseEntity.ok(notes.stream().map(note -> mapper.toDto(note)).collect(Collectors.toList()));
+            return ResponseEntity.ok(notes.stream().map(note -> mapper.toDto(note)).toList());
         }
 
         return ResponseEntity.badRequest().build();
     }
+
+    @GetMapping("/filter")
+    public ResponseEntity<List<NoteResponseDto>> getNotesFilteredByTitle(@RequestParam(defaultValue = "") String string) {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication.isAuthenticated() && authentication.getPrincipal() instanceof User user) {
+            List<Note> filteredNotes = noteService.getFilteredNotesByTitle(user, string);
+
+            return ResponseEntity.ok(filteredNotes.stream().map(note -> mapper.toDto(note)).toList());
+        }
+
+        return ResponseEntity.badRequest().build();
+    }
+
 
 }
